--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -2,22 +2,40 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 <Meta title="Overview/Introduction" />
 
-# Playground Next Storybook 안내
-Playground Next에서 제공하는 UI는 세 가지 층위로 나누어 스토리북에 정리되어 있습니다.
-모든 컴포넌트는 기본적으로 스타일이 없는 원시 상태를 유지하므로, 전역 CSS나 디자인 시스템에서 원하는 방식으로 꾸밀 수 있습니다.
+# TesTea Storybook 안내
+TesTea 에서 제공하는 UI 컴포넌트는 유지보수성과 유연성을 극대화하기 위해 세 가지 층위로 나누어 Storybook에 정리되어 있습니다.
+
+모든 컴포넌트는 기본적으로 스타일이 없는 원시 상태(Unstyled Primitive)를 유지하므로,
+전역 CSS나 디자인 시스템에서 원하는 방식으로 자유롭게 꾸밀 수 있습니다.
+
+## 참고 사항
+일부 UI 컴포넌트의 경우 현재 커스텀 훅(use... hook)을 제작 중이거나 통합 작업 단계에 있어,
+Storybook에서 보이는 동작이 실제 프로덕션 환경에서의 최종 작동 방식과 다르게 나타날 수 있습니다.
+
+최종 릴리스 전까지 지속적으로 업데이트 및 개선될 예정이니, 구현 로직을 참고하시고 테스트에 활용해 주시기 바랍니다.
 
 ## 원시 UI (Primitive)
 아무 디자인이 적용되지 않은 기본 컴포넌트입니다. **Avatar**, **Select**, **Accordion**처럼
 
 상호작용과 접근성만 준비된 채로 제공되므로, 클래스나 인라인 스타일을 자유롭게 덧입혀 사용할 수 있습니다.
 
+### 특징
+컴포넌트의 상호작용(Interaction), 상태 관리(State Management), 접근성(Accessibility, ARIA) 기능만 준비된 채로 제공됩니다.
+
+### 사용
+클래스나 인라인 스타일을 자유롭게 덧입혀 사용하여 원하는 디자인을 구현할 수 있습니다.
+
 ## 디자인 시스템 적용 UI (Themed)
 프로덕트 전반에서 공통으로 사용하는 디자인 토큰이나 전역 스타일을 입혀 재사용할 레이어입니다.
 
-현재는 원시 UI를 바로 사용하도록 제공하지만, 전역 `globals.css` 또는 별도 테마 파일에서 스타일을 정의해 이 섹션에 스토리를 추가하면 됩니다.
+일관된 사용자 경험을 제공하기 위해, 원시 UI 위에 표준화된 스타일(예: 색상, 여백, 폰트)을 적용합니다.
+
+현재는 원시 UI를 바로 사용하도록 제공하지만, 전역 globals.css 또는 별도의 테마 파일에서 스타일을 정의한 후,
+이 섹션에 해당 스타일이 적용된 컴포넌트 스토리를 추가하여 관리할 수 있습니다.
 
 ## 도메인 UI (Domain)
 특정 도메인 요구사항에 맞춘 UI 조각을 배치하는 공간입니다.
 
 예를 들어 인증, 결제, 콘텐츠 작성 등 업무별 컴포넌트를 원시/디자인 시스템 레이어 위에 얹어 구성할 수 있습니다.
-이 레이어에서도 가능한 한 로직과 스타일을 분리해 유지보수를 쉽게 만드세요.
+
+이 레이어에서도 가능한 한 로직과 스타일을 분리해 유지보수를 쉽게 만드는 것이 중요합니다.
